fixed message log overflow issue

--- a/css/view_flower.css
+++ b/css/view_flower.css
@@ -1,6 +1,7 @@
 #message-history {
 	height: 200px;
 	border: solid 1px black;
+    overflow: auto;
 }
 
 #message-input {
